// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render blue Button 1`] = `
<div>
  <button
    background="bg-white dark:bg-slate-400"
    class="px-9 py-3 m-auto shadow-md rounded-md transition-all text-center w-fit text-base font-semibold cursor-pointer hover:translate-y-0.5 hover:brightness-105 text-black bg-white dark:bg-slate-400"
    color="text-black"
    data-testid="button"
  >
    Primary
  </button>
</div>
`;

exports[`Button should render dark green Button 1`] = `
<div>
  <button
    background="bg-white dark:bg-slate-400"
    class="px-9 py-3 m-auto shadow-md rounded-md transition-all text-center w-fit text-base font-semibold cursor-pointer hover:translate-y-0.5 hover:brightness-105 text-black bg-white dark:bg-slate-400"
    color="text-black"
    data-testid="button"
  >
    Success
  </button>
</div>
`;

exports[`Button should render dark red Button 1`] = `
<div>
  <button
    background="bg-white dark:bg-slate-400"
    class="px-9 py-3 m-auto shadow-md rounded-md transition-all text-center w-fit text-base font-semibold cursor-pointer hover:translate-y-0.5 hover:brightness-105 text-black bg-white dark:bg-slate-400"
    color="text-black"
    data-testid="button"
  >
    Cancel
  </button>
</div>
`;

exports[`Button should render default button when variant is null 1`] = `
<div>
  <button
    background="bg-white dark:bg-slate-400"
    class="px-9 py-3 m-auto shadow-md rounded-md transition-all text-center w-fit text-base font-semibold cursor-pointer hover:translate-y-0.5 hover:brightness-105 text-black bg-white dark:bg-slate-400"
    color="text-black"
    data-testid="button"
  >
    Primary
  </button>
</div>
`;

exports[`Button should render green Button 1`] = `
<div>
  <button
    background="bg-white dark:bg-slate-400"
    class="px-9 py-3 m-auto shadow-md rounded-md transition-all text-center w-fit text-base font-semibold cursor-pointer hover:translate-y-0.5 hover:brightness-105 text-black bg-white dark:bg-slate-400"
    color="text-black"
    data-testid="button"
  >
    Success
  </button>
</div>
`;

exports[`Button should render red Button 1`] = `
<div>
  <button
    background="bg-white dark:bg-slate-400"
    class="px-9 py-3 m-auto shadow-md rounded-md transition-all text-center w-fit text-base font-semibold cursor-pointer hover:translate-y-0.5 hover:brightness-105 text-black bg-white dark:bg-slate-400"
    color="text-black"
    data-testid="button"
  >
    Cancel
  </button>
</div>
`;

exports[`Button should render teal Button 1`] = `
<div>
  <button
    background="bg-white dark:bg-slate-400"
    class="px-9 py-3 m-auto shadow-md rounded-md transition-all text-center w-fit text-base font-semibold cursor-pointer hover:translate-y-0.5 hover:brightness-105 text-black bg-white dark:bg-slate-400"
    color="text-black"
    data-testid="button"
  >
    Login
  </button>
</div>
`;
